<resources>
    <string name="app_name">Apekade</string>
    <string name="hello_world">Hello World</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    payment-->
    <string name="string_addpayment">Add Payment</string>
    <string name="Read_payment">Read payment</string>
    <string name="Editpayment">Edit payment</string>
    <string name="ecarddetails">Enter card Detals</string>
    <string name="selectpmethord">Select Payment method</string>
    <string name="cardnumber">Card Number</string>
    <string name="entercardnumber">Enter your card number</string>
    <string name="nameoncard">Name On Card</string>
    <string name="entercname">Enter your name on card</string>
    <string name="edate">Expiry Date</string>
    <string name="mmyy">MM/YY</string>
    <string name="ccvcode">CVC Code</string>
    <string name="cvc">CVC</string>
    <string name="visacard">Visa</string>
    <string name="masetrcard">Master</string>
    <string name="termscondi">I agree to Terms and Conditions</string>
    <string name="paynow">Pay Now</string>
    <string name="EnterCardLbl">Enter Card Details</string>
    <string name="paymentLbl">Please select payment method</string>
    <string name="CardNoLbl">Card Number</string>
    <string name="nameLbl">Name on Card</string>
    <string name="cardNo">1234567891234567</string>
    <string name="nameCard">Enter your name on card</string>
    <string name="exDateLbl">Expiry Date</string>
    <string name="exDateHint">MM / YY</string>
    <string name="CVCno">CVC</string>
    <string name="cvcLbl">CVC Code</string>
    <string name="rb1">I agree to Terms and Conditions</string>
    <string name="payButton">Pay Now</string>
    <string name="cardDetailsLbl">Your Card Details</string>
    <string name="cardnlabel">Card Number</string>
    <string name="chNamelbl">Card Holder\'s Name</string>
    <string name="expDateLabel">Expiry Date</string>
    <string name="cvcLabel">CVC Code</string>
    <string name="cancelButton">Cancel Order</string>
    <string name="buttonContinue">Continue</string>
    <string name="retrieveCardNoLbl"> </string>
    <string name="retrieveCardHname"> </string>
    <string name="exDateRead"> </string>
    <string name="CVCNoRead"> </string>
    <string name="successmsg">Payment Successful!</string>
    <string name="congratzlbl">Congratulation!</string>
    <string name="conflbl">Your Order is Confirmed.</string>
    <string name="emailsentLbl">Email has been sent with details.</string>
    <string name="homeBtn">Back to Home</string>
    <string name="viewBtn">View Order</string>
    <string name="cardNoHint">Enter your card number</string>
    <string name="updateBtn">UPDATE</string>
    <string name="bdeatils">Booking Details</string>
    <string name="btnContinue">Continue</string>
    <string name="bookingDetails">Your order is Confirmed</string>
    <string name="pickup_details">We will pick up you on :</string>
    <string name="datenTime">30 October 2022 at 10.00 AM</string>
    <string name="location">Colombo, Sri Lanka</string>
    <string name="vehicleName">Audi A6 2017</string>
    <string name="lblLocation">Colombo, Sri Lanka</string>
    <string name="lblPrice">Rs.18,000</string>
    <string name="lblPerDay">Per Day</string>
    <string name="reservation">Reservation</string>
    <string name="noOfBookingDays">Number of Booking Days</string>
    <string name="lblDays">2</string>
    <string name="pickupDate">Pick-up Date</string>
    <string name="dropOffLbl">Drop-off Date</string>
    <string name="timeLbl">Booking Time</string>
    <string name="DiscountLbl">Discount</string>
    <string name="totAmount">Total Amount</string>
    <string name="btnBooking">Place Order</string>
    <string name="pickUpDate">Sun, 30 October</string>
    <string name="dropOfDate">Tue, 01 November</string>
    <string name="timeBooking">10.00 AM</string>
    <string name="lblDis">-</string>
    <string name="TotalLbl">Rs.36,000</string>
    <string name="deletecard">Delete Card</string>
    <string name="editcarddetails">Edit Card Details</string>
    <string name="title">DonateMate</string>
    <string name="askDonation">Ask Donation</string>
    <string name="Donation">Donation</string>
    <string name="memori">Memoriam</string>
    <string name="Adddonatin">Add Donation</string>
    <string name="donanam">Donation Name</string>
    <string name="readDonation">Read Donation</string>
    <string name="dname" />
    <string name="rdname">Name</string>
    <string name="type">Type</string>
    <string name="amount">Amount</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="qty">Quantity</string>
    <string name="decs">Description</string>
    <string name="Editdonatin">Edit Donation</string>
</resources>